<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:theme="@style/AppTheme">

    <Button
        android:id="@+id/botonproductos"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/search"
        android:text="@string/EnBlanco"
        android:visibility="gone" />

    <ListView
        android:id="@+id/ListPopUp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/productoBuscar"
        android:background="@android:color/white"
        android:elevation="18dp"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/producto"
        style="@android:style/Widget.Material.Light.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Productitulo"
        android:background="#f3eae2"
        android:dropDownVerticalOffset="50dp"
        android:dropDownWidth="match_parent"
        android:elevation="1dp"
        android:filterTouchesWhenObscured="true"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/productoBuscar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#f3eae2"
        android:elevation="4dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Blanco"
        android:visibility="gone" />

    <TextView
        android:id="@+id/Productitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botonproductos"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="105dp"
        android:text="@string/producto"
        android:textColor="@color/orange"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/cantidad"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/TextView01"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:imeOptions="actionNone"
        android:inputType="numberSigned|numberDecimal">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/producto"
        android:text="@string/cantidad"
        android:textColor="@color/orange"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/Precioproducto"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/VersionC"
        android:layout_toLeftOf="@+id/desplegarPrecios"
        android:ems="10"
        android:imeOptions="actionNone"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/TextView03"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:imeOptions="actionNone"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cantidad"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-1dp"
        android:text="@string/ExistenciaLabel"
        android:textColor="@color/orange"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/psugerido"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:imeOptions="actionNone"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Precioproducto"
        android:layout_alignLeft="@id/psugerido"
        android:layout_marginLeft="0dp"
        android:text="Sugerido"
        android:textColor="@color/orange"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/VersionC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cantidad"
        android:layout_alignLeft="@+id/Precioproducto"
        android:text="@string/precio"
        android:textColor="@color/orange"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/todoslosprecios"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Precioproducto"
        android:layout_alignTop="@+id/cantidad"
        android:layout_alignBottom="@+id/Precioproducto"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="-37dp"
        android:layout_marginBottom="0dp"
        android:elevation="4dp" />

    <Button
        android:id="@+id/desplegarPrecios"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="27dp"
        android:layout_height="12dp"
        android:layout_alignTop="@+id/Precioproducto"
        android:layout_alignBottom="@+id/Precioproducto"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="7dp"
        android:background="@android:drawable/radiobutton_off_background"
        android:elevation="1dp"
        android:text="$"
        android:textColor="@color/darkgrey"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/clavelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/Productitulo"
        android:text="@string/labelclave"
        android:textColor="@color/orange"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/existencialabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Productitulo"
        android:layout_alignBottom="@+id/Productitulo"
        android:layout_alignParentRight="true" />

    <ImageView
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/Productitulo"
        android:layout_margin="3dp"
        android:background="#f3eae2"
        android:elevation="1dp" />

    <Button
        android:id="@+id/buttonsearch"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/Productitulo"
        android:layout_margin="5dp"
        android:background="?android:attr/actionModeWebSearchDrawable"
        android:elevation="3dp" />



</RelativeLayout>